...
    <string name="detail_song_status_downloading">Downloading</string>
    <string name="detail_retry_song">Retry</string>
    <string name="detail_no_tracks">This playlist has no tracks.</string>
    <string name="detail_download_progress">%1$d of %2$d downloaded</string>

    <!-- Player -->
    <string name="player_nothing_playing">Nothing playing</string>
    <string name="player_queue">Queue</string>
    <string name="player_shuffle_on">Shuffle on</string>
    <string name="player_shuffle_off">Shuffle off</string>
    <string name="player_repeat_mode">Repeat %1$s</string>
    <string name="player_repeat_off">Repeat off</string>
    <string name="player_repeat_all">Repeat all</string>
...
